--- a/README
+++ b/README
@@ -1,3 +1,8 @@
-# TÍTULO DEL PROYECTO
+#TÍTULO DEL PROYECTO
 
-## PROCEDIMIENTO
+##Introducción
+El autor dice
+
+<Este proyecto es muy fácil de realizar
+
+##Procedimiento
